--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -159,6 +159,16 @@
         "code",
         "doc"
       ]
+    },
+    {
+      "login": "loming",
+      "name": "LoMing",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/4988275?v=4",
+      "profile": "https://github.com/loming",
+      "contributions": [
+        "code",
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
