--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -179,6 +179,16 @@
         "code",
         "doc"
       ]
+    },
+    {
+      "login": "Ryanthegiantlion",
+      "name": "Ryan Harmuth",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/1843898?v=4",
+      "profile": "https://github.com/Ryanthegiantlion",
+      "contributions": [
+        "code",
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
