--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -199,6 +199,16 @@
         "code",
         "doc"
       ]
+    },
+    {
+      "login": "taylorgoodallau",
+      "name": "Taylor Goodall",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/47597450?v=4",
+      "profile": "https://github.com/taylorgoodallau",
+      "contributions": [
+        "code",
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
