Add @nhkhanh as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -239,6 +239,16 @@
         "code",
         "doc"
       ]
+    },
+    {
+      "login": "nhkhanh",
+      "name": "nhkhanh",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/4928520?v=4",
+      "profile": "https://github.com/nhkhanh",
+      "contributions": [
+        "code",
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
