--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "object-diff": "^0.0.4"
   },
   "devDependencies": {
+    "all-contributors-cli": "^6.16.1",
     "babel-cli": "^6.18.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-add-module-exports": "^0.2.1",
@@ -69,214 +70,5 @@
     "react-admin": "^2.1.1",
     "react-dom": "^16.4.1",
     "sinon": "^2.2.0"
-  },
-  "contributors": [
-    {
-      "name": "Taylor Goodall",
-      "email": null,
-      "url": "https://github.com/taylorgoodallau",
-      "contributions": 1,
-      "additions": 28,
-      "deletions": 8,
-      "hireable": true
-    },
-    {
-      "name": "Santiago Botta",
-      "email": null,
-      "url": "https://github.com/sgobotta",
-      "contributions": 1,
-      "additions": 1744,
-      "deletions": 258,
-      "hireable": true
-    },
-    {
-      "name": null,
-      "email": null,
-      "url": "https://github.com/jvke",
-      "contributions": 1,
-      "additions": 35,
-      "deletions": 1,
-      "hireable": true
-    },
-    {
-      "name": "Fernando Navarro",
-      "email": null,
-      "url": "https://github.com/kfern",
-      "contributions": 1,
-      "additions": 63,
-      "deletions": 1,
-      "hireable": null
-    },
-    {
-      "name": "LoMing",
-      "email": null,
-      "url": "https://github.com/loming",
-      "contributions": 1,
-      "additions": 53,
-      "deletions": 7,
-      "hireable": null
-    },
-    {
-      "name": "Daniel Prentis",
-      "email": null,
-      "url": "https://github.com/dprentis",
-      "contributions": 1,
-      "additions": 297,
-      "deletions": 180,
-      "hireable": null
-    },
-    {
-      "name": null,
-      "email": null,
-      "url": "https://github.com/nhkhanh",
-      "contributions": 1,
-      "additions": 1,
-      "deletions": 1,
-      "hireable": null
-    },
-    {
-      "name": null,
-      "email": null,
-      "url": "https://github.com/alex-all3dp",
-      "contributions": 1,
-      "additions": 52,
-      "deletions": 4,
-      "hireable": null
-    },
-    {
-      "name": "Fábio Toi",
-      "email": null,
-      "url": "https://github.com/fabioptoi",
-      "contributions": 1,
-      "additions": 32,
-      "deletions": 3,
-      "hireable": null
-    },
-    {
-      "name": "Mohammed Faizuddin",
-      "email": null,
-      "url": "https://github.com/TheHyphen",
-      "contributions": 1,
-      "additions": 33,
-      "deletions": 2,
-      "hireable": null
-    },
-    {
-      "name": "Dan Stevens",
-      "email": null,
-      "url": "https://github.com/DanStorm",
-      "contributions": 1,
-      "additions": 218,
-      "deletions": 50,
-      "hireable": null
-    },
-    {
-      "name": "Wédney Yuri",
-      "email": null,
-      "url": "https://github.com/wedneyyuri",
-      "contributions": 2,
-      "additions": 4,
-      "deletions": 3,
-      "hireable": true
-    },
-    {
-      "name": "Ryan Harmuth",
-      "email": null,
-      "url": "https://github.com/Ryanthegiantlion",
-      "contributions": 1,
-      "additions": 4,
-      "deletions": 0,
-      "hireable": true
-    },
-    {
-      "name": "Dream",
-      "email": null,
-      "url": "https://github.com/dreamrace",
-      "contributions": 2,
-      "additions": 2,
-      "deletions": 0,
-      "hireable": null
-    },
-    {
-      "name": "Dmitrii Maganov",
-      "email": null,
-      "url": "https://github.com/vonagam",
-      "contributions": 2,
-      "additions": 55,
-      "deletions": 221,
-      "hireable": null
-    },
-    {
-      "name": "tony kerz",
-      "email": null,
-      "url": "https://github.com/tony-kerz",
-      "contributions": 3,
-      "additions": 251,
-      "deletions": 100,
-      "hireable": null
-    },
-    {
-      "name": "Igor Berlenko",
-      "email": null,
-      "url": "https://github.com/7flash",
-      "contributions": 2,
-      "additions": 4,
-      "deletions": 3,
-      "hireable": null
-    },
-    {
-      "name": "Lijo Antony",
-      "email": null,
-      "url": "https://github.com/lijoantony",
-      "contributions": 4,
-      "additions": 24,
-      "deletions": 5,
-      "hireable": true
-    },
-    {
-      "name": "Tomasz Bak",
-      "email": null,
-      "url": "https://github.com/tb",
-      "contributions": 2,
-      "additions": 187,
-      "deletions": 127,
-      "hireable": true
-    },
-    {
-      "name": "Amr Noman",
-      "email": null,
-      "url": "https://github.com/AmrN",
-      "contributions": 4,
-      "additions": 239,
-      "deletions": 7,
-      "hireable": null
-    },
-    {
-      "name": "José Luis Di Biase",
-      "email": null,
-      "url": "https://github.com/josx",
-      "contributions": 98,
-      "additions": 14557,
-      "deletions": 12133,
-      "hireable": true
-    },
-    {
-      "name": "F.C",
-      "email": null,
-      "url": "https://github.com/fonzarely",
-      "contributions": 6,
-      "additions": 2507,
-      "deletions": 19,
-      "hireable": null
-    },
-    {
-      "name": "Nicholas Nelson",
-      "email": null,
-      "url": "https://github.com/nicholasnelson",
-      "contributions": 10,
-      "additions": 436,
-      "deletions": 220,
-      "hireable": true
-    }
-  ]
+  }
 }
