--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
   ],
   "compilerOptions": {
     "allowJs": true,
+    "moduleResolution": "node",
+    "target": "ES2015",
     "declaration": true,
     "isolatedModules": true,
     "emitDeclarationOnly": true,
