--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "scripts": {
     "pretest": "npm run build",
     "test": "npm run coverage",
-    "build": "make build",
+    "build": "cross-env NODE_ENV=production ./node_modules/.bin/babel ./src -d lib --ignore '*.spec.js' && tsc",
     "build:types": "tsc",
-    "clean": "make clean",
-    "prepublish": "make build",
+    "clean": "shx rm -rf lib",
+    "prepublish": "cross-env NODE_ENV=production ./node_modules/.bin/babel ./src -d lib --ignore '*.spec.js' && tsc",
     "publish": "git push origin --tags && npm run changelog && git push origin",
     "changelog": "github_changelog_generator && git add CHANGELOG.md && git commit -am \"Updating changelog\"",
     "release:patch": "npm version patch && npm publish",
@@ -62,6 +62,7 @@
     "babel-register": "^6.26.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^7.1.1",
+    "cross-env": "^7.0.3",
     "eslint": "^5.7.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
@@ -71,6 +72,7 @@
     "react": "^16.4.1",
     "react-admin": "^2.1.1",
     "react-dom": "^16.4.1",
+    "shx": "^0.3.3",
     "sinon": "^2.2.0",
     "typescript": "^4.1.3"
   }
