--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
   "scripts": {
     "pretest": "npm run build",
     "test": "npm run coverage",
-    "build": "make build",
+    "build": "cross-env NODE_ENV=production ./node_modules/.bin/babel ./src -d lib --ignore '*.spec.js' && tsc",
     "build:types": "tsc",
-    "clean": "make clean",
-    "prepublish": "make build",
+    "clean": "shx rm -rf lib",
+    "prepublish": "cross-env NODE_ENV=production ./node_modules/.bin/babel ./src -d lib --ignore '*.spec.js' && tsc",
     "publish": "git push origin --tags && npm run changelog && git push origin",
     "changelog": "github_changelog_generator && git add CHANGELOG.md && git commit -am \"Updating changelog\"",
     "release:patch": "npm version patch && npm publish",
     "release:minor": "npm version minor && npm publish",
     "release:major": "npm version major && npm publish",
-    "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- --opts mocha.opts --require babel-register",
-    "mocha": "env DEBUG=ra-data-feathers:* mocha  --require babel-register"
+    "coverage": "nyc node_modules/mocha/bin/_mocha -- --require babel-register",
+    "mocha": "cross-env DEBUG=ra-data-feathers:* mocha  --require babel-register"
   },
   "files": [
     "LICENSE",
@@ -60,18 +60,20 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.26.0",
-    "chai": "^3.5.0",
+    "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
+    "cross-env": "^7.0.3",
     "eslint": "^5.7.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
-    "istanbul": "^1.1.0-alpha.1",
-    "mocha": "^5.2.0",
+    "mocha": "^8.4.0",
+    "nyc": "^15.1.0",
     "react": "^16.4.1",
     "react-admin": "^2.1.1",
     "react-dom": "^16.4.1",
-    "sinon": "^2.2.0",
+    "shx": "^0.3.3",
+    "sinon": "^11.1.1",
     "typescript": "^4.1.3"
   }
 }
