--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "types": "lib/index.d.ts",
   "scripts": {
     "pretest": "npm run build",
-    "test": "npm run coverage",
+    "test": "npm run coverage && npm run test:type",
+    "test:type": "tsd",
     "build": "cross-env NODE_ENV=production ./node_modules/.bin/babel ./src -d lib --ignore '*.spec.js' && tsc",
     "build:types": "tsc",
     "clean": "shx rm -rf lib",
@@ -74,6 +75,10 @@
     "react-dom": "^16.4.1",
     "shx": "^0.3.3",
     "sinon": "^11.1.1",
-    "typescript": "^4.1.3"
+    "tsd": "^0.17.0",
+    "typescript": "^4.3.2"
+  },
+  "tsd": {
+    "directory": "test"
   }
 }
