--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,8 @@
     "isolatedModules": true,
     "emitDeclarationOnly": true,
     "outDir": "lib",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true
   },
 }
