--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "A feathers client for react-admin",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "engines": {
+      "node": "18.20.7"
+  },
   "scripts": {
     "pretest": "npm run build",
     "test": "npm run coverage && npm run test:type",
