--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -258,6 +258,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "olosegres",
+      "name": "Sergei Solo",
+      "avatar_url": "https://avatars.githubusercontent.com/u/3730589?v=4",
+      "profile": "https://github.com/olosegres/jsona",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
