Add @berviantoleo as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -267,6 +267,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "berviantoleo",
+      "name": "Bervianto Leo Pratama",
+      "avatar_url": "https://avatars.githubusercontent.com/u/15927349?v=4",
+      "profile": "https://berviantoleo.my.id/",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
