--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -276,6 +276,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "JPStrydom",
+      "name": "JP Strydom",
+      "avatar_url": "https://avatars.githubusercontent.com/u/25905330?v=4",
+      "profile": "https://github.com/JPStrydom",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
