--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "A feathers client for react-admin",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "engines": {
+      "node": "18.20.7"
+  },
   "scripts": {
     "pretest": "npm run build",
     "test": "npm run coverage && npm run test:type",
@@ -45,8 +48,8 @@
   },
   "homepage": "https://github.com/josx/ra-data-feathers#readme",
   "peerDependencies": {
-    "@feathersjs/client": "^3.5.3 || ^4.3.0",
-    "react-admin": "^2.1.1|| ^3.0.0|| ^4.0.0"
+    "@feathersjs/client": "^3.5.3 || ^4.3.0 || ^5.0.0",
+    "react-admin": "^2.1.1 || ^3.0.0|| ^4.0.0 || ^5.0.0"
   },
   "dependencies": {
     "debug": "^3.0.0",
